[gd_scene load_steps=2 format=2]

[ext_resource path="res://editor/bpm_input.gd" type="Script" id=1]

[node name="bpm_input" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 17.0
margin_right = 116.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 999.0

[node name="btn_tap" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 112.0
margin_bottom = 24.0
text = "Tap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 42.0
text = "BPM"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/btn_tap" to="." method="_on_meter_btn_pressed"]
